--- a/package.json
+++ b/package.json
@@ -19,5 +19,17 @@
   "dependencies": {
     "angular": "^1.5.9",
     "gulp": "^3.9.1"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.1",
+    "gulp-angular-templatecache": "^2.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-sourcemaps": "^1.9.1",
+    "gulp-task-loader": "^1.4.4",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
