--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "angular": "^1.5.9",
     "gulp": "^3.9.1",
-    "ui-router": "^1.0.0-alpha.3"
+    "ui-router": "^1.0.0-alpha0"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.9",
